--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="sv">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -24,59 +24,18 @@
         <br>
         <br>
         <form id="quiz" onsubmit="ladda();return false">
-            <input type="radio" name="fråga1" value="Indier">Där indierna bor <br>
-            <input type="radio" name="fråga1" value="Indianer">Där indianerna bor <br>
-            <input type="radio" name="fråga1" value="Indonesien">Där Indonesierna bor <br>
-            <input type="radio" name="fråga1" value="Trädgård">I din trädgård <br><br>
+        <div id="alternativ">
+            <input type="radio" name="1" value="1">Där indierna bor <br>
+            <input type="radio" name="1" value="2">Där indianerna bor <br>
+            <input type="radio" name="1" value="3">Där Indonesierna bor <br>
+            <input type="radio" name="1" value="4">I din trädgård <br><br>
+        </div>
             <input class="btn btn-primary" id="knapp" type="submit" value="Nästa" onclick="resultat(), svar()">
           <br>
           <br>
           <h5 id="avsluta"></h5>
           <h5 id="resultat"></h5>
-            <input type="radio" name="2" value="Mikronesien">Mikronesien <br>
-            <input type="radio" name="2" value="Sverige">Sverige <br>
-            <input type="radio" name="2" value="Vatikanstaten">Vatikanstaten <br>
-            <input type="radio" name="2" value="Lischtenstein">Lischtenstein <br>
-          <br><br>
-            <input type="radio" name="3" value="Mikronesien">Tyskland <br>
-            <input type="radio" name="3" value="Sverige">Ryssland <br>
-            <input type="radio" name="3" value="Vatikanstaten">Slovakien <br>
-            <input type="radio" name="3" value="Lischtenstein">Ungern <br>
-          <br><br>
-            <input type="radio" name="4" value="Nigerien">En del av Nigeria<br>
-            <input type="radio" name="4" value="Koloni">En brittisk koloni<br>
-            <input type="radio" name="4" value="Råtta">En stor råtta<br>
-            <input type="radio" name="4" value="ö">En ö i stilla havet<br>
-          <br><br>
-            <input type="radio" name="5" value="Lång">Lång <br>
-            <input type="radio" name="5" value="Längre">Längre<br>
-            <input type="radio" name="5" value="Väldigt">Väldigt lång<br>
-            <input type="radio" name="5" value="Varv">Två varv runt jorden lång<br>
-                      <br><br>
-            <input type="radio" name="6" value="Sibirien">I Sibirien<br>
-            <input type="radio" name="6" value="Burdusien">I Burdusien<br>
-            <input type="radio" name="6" value="Galicien">I Galicien<br>
-            <input type="radio" name="6" value="Bessarabien">I Bessarabien<br>
-                      <br><br>
-            <input type="radio" name="7" value="Tyska">Tyska<br>
-            <input type="radio" name="7" value="Ryska">Ryska<br>
-            <input type="radio" name="7" value="Inuktitut">Inuktitut<br>
-            <input type="radio" name="7" value="Utomjordiska">Utomjordiska<br>
-                      <br><br>
-            <input type="radio" name="8" value="Eifel">I Eifel<br>
-            <input type="radio" name="8" value="Torn">I tornedalen<br>
-            <input type="radio" name="8" value="Paris">I Paris<br>
-            <input type="radio" name="8" value="Giza">I Giza<br>
-                      <br><br>
-            <input type="radio" name="9" value="Rom">I Rom<br>
-            <input type="radio" name="9" value="Håven">I Håven<br>
-            <input type="radio" name="9" value="Louvren">I Louvren<br>
-            <input type="radio" name="9" value="Kyrkan">I Guds hus<br>
-                      <br><br>
-            <input type="radio" name="10" value="Danmark">Danmark<br>
-            <input type="radio" name="10" value="Danmark">Danmark<br>
-            <input type="radio" name="10" value="Danmark">Danmark<br>
-            <input type="radio" name="10" value="Norge">Norge<br>
+            
         </form>
       </section> 
     </div>
