--- a/index.html
+++ b/index.html
@@ -15,29 +15,69 @@
   <body>
     <div class="container">
       <section class="sectionmargin">
-        <h1 class="display-utf">Geografiquiz</h1>
+        <h1 class="display-3">Geografiquiz</h1>
+        <br>
         <div class="bakgrund">
           <img src="bilder\Karta.jpg" class="storlek">
         </div>
-        <h3 id="svar">Fråga 1</h3>
-        <h4 id="fraga">Var ligger Indien</h4>
-        <br>
-        <br>
-        <form id="quiz" onsubmit="ladda();return false">
-        <div id="alternativ">
-            <input type="radio" name="1" value="1">Där indierna bor <br>
-            <input type="radio" name="1" value="2">Där indianerna bor <br>
-            <input type="radio" name="1" value="3">Där Indonesierna bor <br>
-            <input type="radio" name="1" value="4">I din trädgård <br><br>
-        </div>
-            <input class="btn btn-primary" id="knapp" type="submit" value="Nästa" onclick="resultat(), svar()">
+        <div>
+          <br>
+          <h3 id="svar">Fråga 1</h3>
+          <h4 id="fraga">Var ligger Indien</h4>
           <br>
           <br>
-          <h5 id="avsluta"></h5>
-          <h5 id="resultat"></h5>
-            
+          <form id="quiz" onsubmit="ladda();return false">
+            <div id="alternativ">
+                <input type="radio" name="fråga" value="1">Där indierna bor <br>
+                <input type="radio" name="fråga" value="2">Där indianerna bor <br>
+                <input type="radio" name="fråga" value="3">Där Indonesierna bor <br>
+                <input type="radio" name="fråga" value="4">I din trädgård <br><br>
+            </div>
+              <input class="btn btn-primary" id="knapp" type="submit" value="Nästa" onclick="resultat(), svar()">
+            <br>
+            <br>
+            <h5 id="avsluta"></h5>
+            <h5 id="resultat"></h5>
+         </div>   
         </form>
       </section> 
+    </div>
+
+    <section class="karrusell">
+    <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+    	<div class="carousel-inner">
+    		<div class="carousel-item active" data-interval="10000">
+    			<img src="bilder\Indien.png" class="d-block w-100" alt="...">
+    		</div>
+    		<div class="carousel-item" data-interval="2000">
+    			<img src="bilder\Vatikanen.png" class="d-block w-100" alt="...">
+    		</div>
+    		<div class="carousel-item">
+    			<img src="bilder\Tropiken.png" class="d-block w-100" alt="...">
+    		</div>
+    		<div class="carousel-item">
+    			<img src="bilder\Kinamuren.png" class="d-block w-100" alt="...">
+    		</div>
+    	</div>
+    	<a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+    		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    		<span class="sr-only">Previous</span>
+    	</a>
+    	<a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+    		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+    		<span class="sr-only">Next</span>
+    	</a>
+    </div>
+    </section>
+
+    <br>
+    <br>
+
+    <div class="card footer">
+    	<div class="card-body">
+    		Quiz skapat av Albin Haraldsson på Teknikprogrammet
+    	</div>
+    </div>
     </div>
     
 
